feat: update translations (#631)

--- a/resources/src/main/res/values-fr/strings.xml
+++ b/resources/src/main/res/values-fr/strings.xml
@@ -9,23 +9,23 @@
   <string name="about_option_website">Site Web</string>
   <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s pour %2$s</string>
-  <string name="about_subtitle">Simplement, un IDE pour android.</string>
+  <string name="about_subtitle">Simplement, un IDE pour Android</string>
   <string name="msg_get_package_failed">Impossible d\'extraire le nom du package !</string>
   <string name="msg_share_app">AndroidIDE est un Environnement de développement integré (IDE) pour la création d\'application Android sur votre appareil android. Il support :\n1. Gradle \n2. OpenJDK 17.0-22.\n3. Complétation Java automatique \n4. Complétation XML Auto \n5. Support Kotlin et bien plus.\n\nTélecharger AndroidIDE sur https://androidide.com</string>
   <string name="msg_need_help">Si vous rencontrez des problémes lorsque vous utilisez AndroidIDE (ex: pendant la compilation d\'une application), vous pouvez demandez de l\'aide sur le groupe Telegram (Anglais).\n\nVous pouvez également demander de l\'aide sur notre émail.</string>
   <string name="discuss_amp_help">Discussions &amp; Aides</string>
-  <string name="title_github">GitHub</string>
+  <string name="title_github">Github</string>
   <string name="need_help">Besoin d\'aide ?</string>
   <string name="other">Autre</string>
   <string name="share_with_friends">Partager avec des amis</string>
   <string name="ide_preferences">Préférences de l\'IDE</string>
   <string name="discussions_on_telegram">Discuter sur Telegram (anglais)</string>
-  <string name="official_tg_channel">Official Telegram Channel</string>
+  <string name="official_tg_channel">Channel Telegram Officiel</string>
   <string name="msg_empty_view">je n\'ai rien à vous montrez &#8230;</string>
   <string name="btn_terminal">Terminal</string>
   <string name="reset">Réinitialiser</string>
-  <string name="app_logs">App Logs</string>
-  <string name="ide_logs">IDE Logs</string>
+  <string name="app_logs">Logs App</string>
+  <string name="ide_logs">Logs IDE</string>
   <string name="label_splash_image">Splash image</string>
   <string name="get_started">Commencer</string>
   <!-- LSP, Diagnostics & Completions -->
@@ -101,18 +101,18 @@
   <string name="template_libgdx">Jeu LibGDX</string>
   <string name="template_description_libgdx">Projet Jeu LibGDX, affiche une image comme example.</string>
   <string name="template_compose">Jetpack Compose</string>
-  <string name="template_description_compose">Basic Jetpack Compose hello world project.</string>
-  <string name="template_navigation_tabs">Bottom Navigation Activity</string>
-  <string name="template_navigation_tabs_description">Creates a new activity with bottom navigation</string>
-  <string name="template_tabs">Tabbed Activity</string>
-  <string name="template_tabs_description">Creates a new blank activity with tabs</string>
+  <string name="template_description_compose">Simple projet Jetpack Compose.</string>
+  <string name="template_navigation_tabs">Activité Bottom Navigation </string>
+  <string name="template_navigation_tabs_description">Créer une nouvelle activité avec le Bottom Navigation </string>
+  <string name="template_tabs">Projet avec les Tabs</string>
+  <string name="template_tabs_description">Créer un projet vide avec Tabs</string>
   <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
-  <string name="template_cpp_description">Creates a new project with an Empty Activity configured to use JNI</string>
-  <string name="template_no_activity">No Activity</string>
-  <string name="template_no_activity_description">Creates a new project without activity</string>
-  <string name="template_no_AndroidX">NoAndroidX</string>
-  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
+  <string name="template_cpp_description">Créez un nouveau projet avec une activité vide configuré pour utiliser JNI</string>
+  <string name="template_no_activity">Pas d\'activité</string>
+  <string name="template_no_activity_description">Créer un nouveau projet sans activité </string>
+  <string name="template_no_AndroidX">Sans AndroidX</string>
+  <string name="template_description_noAndroidX">Créer un projet sans la librairie AndroidX</string>
   <!-- Files -->
   <string name="save">Sauvegarder</string>
   <string name="menu_find">Trouver</string>
@@ -148,7 +148,7 @@
   <string name="file_name">Nom du fichier</string>
   <string name="new_name">Nouveau nom</string>
   <string name="new_file">Nouveau fichier</string>
-  <string name="create_auto_layout">Create layout file automatically</string>
+  <string name="create_auto_layout">Créer un fichier layout automatiquement </string>
   <string name="new_java_class">Nouvelle class java</string>
   <string name="new_xml_resource">Nouvelle ressource XML</string>
   <string name="new_folder">Nouveau dossier</string>
@@ -173,7 +173,7 @@
   <string name="restype_layout">Layout</string>
   <string name="restype_menu">Menu</string>
   <string name="restype_other">Autre</string>
-  <string name="classtype_class">Class</string>
+  <string name="classtype_class">Classe</string>
   <string name="classtype_activity">Activity</string>
   <string name="classtype_interface">Interface</string>
   <string name="classtype_enum">Enum</string>
@@ -181,7 +181,7 @@
   <string name="msg_failed_list_files">Échec lors de la liste des projets</string>
   <string name="msg_storage_denied">impossible de continuer sans les permissions du stockage</string>
   <string name="msg_storage_granted">Permissions du stockage données</string>
-  <string name="open_with">Open with...</string>
+  <string name="open_with">Ouvrir avec...</string>
   <!-- Code Editor -->
   <string name="undo">défaire</string>
   <string name="redo">refaire</string>
@@ -199,9 +199,9 @@
   <string name="idepref_editor_drawhexcolors_title">Afficher les couleurs hex</string>
   <string name="idepref_editor_drawhexcolors_summary">L\'éditeur doit-il afficher les couleurs hex ?</string>
   <string name="idepref_editor_word_wrap_title">Word Wrap</string>
-  <string name="idepref_editor_word_wrap_summary">Use wordwrap of the editor</string>
-  <string name="idepref_editor_use_magnifier_title">Enable Magnifier</string>
-  <string name="idepref_editor_use_magnifier_summary">Magnify text at cursor position while selecting text in editor</string>
+  <string name="idepref_editor_word_wrap_summary">Utiliser le Word Wrap de l\'éditeur </string>
+  <string name="idepref_editor_use_magnifier_title">Activer Magnifier</string>
+  <string name="idepref_editor_use_magnifier_summary">Agrandir le texte à la position du curseur lors de la sélection du texte dans l\'éditeur</string>
   <string name="idepref_editor_title">Éditeur</string>
   <string name="idepref_build_title">Compileur et lancements</string>
   <string name="title_open_projects">Ouvrir le dernier projet</string>
@@ -245,10 +245,10 @@
   <string name="msg_report_crash">Merci d\'ouvrir une nouvelle Issue sur Gitub avec l\'erreur ci-dessous (anglais): </string>
   <string name="msg_crash_report_hint">Cliquez sur le bouton ci dessous pour copier les logs et une ouvrir la page des issues.</string>
   <string name="msg_copy_report_action">Copier et signaler</string>
-  <string name="msg_reading_bootstrap">Reading bootstrap archive…</string>
-  <string name="msg_bootstrap_installation_error">Bootstrap installation failed with the following exception.</string>
+  <string name="msg_reading_bootstrap">Lecture de l\'archive bootstrap</string>
+  <string name="msg_bootstrap_installation_error">Échec de l\'installation de Bootstrap avec l\'erreur suivante.</string>
   <string name="title_translations">Traductions</string>
-  <string name="title_compiler_module_install">Installing compiler module</string>
+  <string name="title_compiler_module_install">Installation des modules du compileur</string>
   <string name="msg_compiler_module_install">Compiler module is being installed, please wait&#8230;</string>
   <string name="msg_compiler_module_install_failed">Échec de l\'installation des modules du compileur. Érreur:\n%s</string>
   <string name="msg_compiler_module_installed">Modules du compileur installés avec succès !</string>
@@ -283,20 +283,20 @@
   <string name="idepref_java_useGoogleStyle_summary">Utiliser le style de formatage Java de Google.</string>
   <string name="idepref_visiblePassword_title">Suggestions de mot de passe</string>
   <string name="idepref_visiblePassword_summary">À utiliser pour l\'indicateur de type d\'entrée de mot de passe visible dans l\'éditeur. Cela garantit qu\'aucune suggestion n\'est proposée par le clavier.</string>
-  <string name="previous">Previous</string>
-  <string name="msg_replacing">Replacing…</string>
-  <string name="title_gradle_service_notification_ticker">Gradle build service started</string>
+  <string name="previous">Précédent</string>
+  <string name="msg_replacing">Replacement...</string>
+  <string name="title_gradle_service_notification_ticker">Gradle Build Service démarré.</string>
   <string name="title_gradle_service_notification">Gradle build service</string>
-  <string name="msg_gradle_service_notification">AndroidIDE\'s Gradle build service is running in the background.</string>
-  <string name="title_cancel_build">Cancel build</string>
+  <string name="msg_gradle_service_notification">Gradle Build Service d\'AndroidIDE fonctionne en arrière plan.</string>
+  <string name="title_cancel_build">Annuler compilation </string>
   <string name="title_warning">Warning</string>
-  <string name="msg_ndk_currently_unsupported">NDK is currently not officially supported. This template works only after you setup NDK</string>
-  <string name="msg_initializing_project">Initializing project</string>
-  <string name="msg_project_initialized">Project initialized</string>
-  <string name="msg_project_initialization_failed">Project initialization failed</string>
-  <string name="msg_project_not_initialized">Project is not initialized</string>
-  <string name="msg_running_task">Running task: \'%1$s\'</string>
-  <string name="msg_replacement">Replacement</string>
+  <string name="msg_ndk_currently_unsupported">Le NDK n\'est pas supporté officiellement actuellement. Cette template fonctionnera uniquement après avoir configuré le NDK</string>
+  <string name="msg_initializing_project">Initialisation du projet</string>
+  <string name="msg_project_initialized">Projet initialisé</string>
+  <string name="msg_project_initialization_failed">Échec de l\'Initialisation du Projet</string>
+  <string name="msg_project_not_initialized">Le projet n\'est pas initialisé</string>
+  <string name="msg_running_task">Tâche en cours: \'%1$s\'</string>
+  <string name="msg_replacement">Remplacement </string>
   <string name="title_sync_project">Sync project</string>
   <string name="wizard_error_name_empty">Name cannot be empty.</string>
   <string name="wizard_error_name_illegal">Name cannot contain illegal characters</string>
@@ -372,7 +372,6 @@
   <string name="idepref_maxLineWidth_title">Max line width</string>
   <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to index for splitted attributes.</string>
   <string name="idepref_preservedNewLines_title">Preserved new lines</string>
   <string name="idepref_preservedNewLines_summary">The maximum number of continuous line breaks that should be preserved.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
@@ -380,31 +379,31 @@
   <string name="xml_formatting_options">XML formatting options</string>
   <string name="xml_formatting_options_summary">Configure the XML formatter</string>
   <string name="idepref_customFont_title">Use custom font</string>
-  <string name="idepref_customFont_summary">If enabled, the file at \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" will be used as Editor font.</string>
-  <string name="idepref_chooseFont_title">Choose custom font</string>
+  <string name="idepref_customFont_summary">Si activé le font : \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" sera utilisé comme font d\'éditeur par défaut.</string>
+  <string name="idepref_chooseFont_title">Choisir font personnalisé </string>
   <string name="idepref_chooseFont_summary">Choose font to use in the Terminal (and optionally, in the Editor).</string>
-  <string name="msg_installing_apk">Installing APK...</string>
-  <string name="msg_installed_successfully">Installed successfully</string>
-  <string name="msg_action_open_application">Do you want to open the application?</string>
-  <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build service</string>
+  <string name="msg_installing_apk">Installation de l\'application...</string>
+  <string name="msg_installed_successfully">Application installée.</string>
+  <string name="msg_action_open_application">Voulez-vous ouvrir l\'application ?</string>
+  <string name="title_gradle_service_notification_channel">Gradle Build Service d\'AndroidIDE</string>
   <string name="msg_hex_color_code">Code de couleur Hex</string>
   <string name="msg_color_picker_pick">Prendre</string>
   <string name="msg_chmod_exec">Définition des permissions exécutables…</string>
   <string name="msg_linking">Liaison %1$s à %2$s</string>
   <string name="msg_extracting_hooks">Extraction des librairies hook…</string>
-  <string name="msg_empty_package">Package name is empty</string>
-  <string name="msg_package_is_not_valid">Package name is not a valid</string>
-  <string name="msg_package_is_to_long">Package name is to long</string>
-  <string name="msg_package_not_valid_char_1">The character \'_\' cannot be the first character in a package segment</string>
+  <string name="msg_empty_package">Le nom du package est vide</string>
+  <string name="msg_package_is_not_valid">Le nom du package n\'est pas valide</string>
+  <string name="msg_package_is_to_long">Le nom du package est trop long</string>
+  <string name="msg_package_not_valid_char_1">Le caractère \'_\' ne peux être utilisé au début du nom de package</string>
   <string name="msg_package_not_use_digit_first">A digit cannot be the first character in a package segment</string>
-  <string name="msg_package_not_valid_char_2">The character \"%1$s\" is not allowed in Android application package names</string>
+  <string name="msg_package_not_valid_char_2">Le caractère \"%1$s\" n\'est pas autorisé dans le nom du package</string>
   <string name="msg_package_mus_have_dot">The package must have at least one \'.\' separator</string>
-  <string name="action_import_classes">Import class(es)</string>
-  <string name="action_generate_setters_getters">Generate setters/getters</string>
+  <string name="action_import_classes">Importer la.e(s) classe(s)</string>
+  <string name="action_generate_setters_getters">Ajouter setters/getters</string>
   <string name="action_add_throws">Add \'throws\'</string>
-  <string name="action_comment_line">Comment line</string>
-  <string name="action_create_missing_method">Create missing method</string>
-  <string name="action_convert_to_block">Convert to block</string>
+  <string name="action_comment_line">Commenter ligne</string>
+  <string name="action_create_missing_method">Ajouter méthode manquante </string>
+  <string name="action_convert_to_block">Convertir vers un block</string>
   <string name="action_generate_constructor">Generate constructor</string>
   <string name="action_implement_abstract_methods">Implement abstract method(s)</string>
   <string name="action_remove_class">Remove class</string>
@@ -473,4 +472,12 @@
   <string name="widget_linear_layout_horz">LinearLayout (H)</string>
   <string name="widget_linear_layout_vert">LinearLayout (V)</string>
   <string name="widget_relative_layout">RelativeLayout</string>
+  <!-- GIT -->
+  <string name="git_clone">Clone</string>
+  <string name="git_clone_repo">Clone git repository</string>
+  <string name="git_clone_repo_url">Repository URL</string>
+  <string name="git_clone_in_progress">Cloning repository</string>
+  <string name="git_clone_success">Git clone successful</string>
+  <string name="git_clone_failed">Failed to clone git repository</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
 </resources>
