--- a/resources/src/main/res/values-pt/strings.xml
+++ b/resources/src/main/res/values-pt/strings.xml
@@ -112,7 +112,7 @@
   <string name="template_no_activity">Sem Activity</string>
   <string name="template_no_activity_description">Cria um novo projeto sem activity</string>
   <string name="template_no_AndroidX">NoAndroidX</string>
-  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
+  <string name="template_description_noAndroidX">Cria um novo projeto sem a biblioteca AndroidX</string>
   <!-- Files -->
   <string name="save">Salvar</string>
   <string name="menu_find">Encontrar</string>
@@ -222,14 +222,14 @@
   <string name="err_cannot_preview_layout">Não foi possível visualizar o layout</string>
   <string name="err_cannot_inflate_layout">Não foi possível inflar o layout</string>
   <!-- Layout preview and designer -->
-  <string name="msg_cannot_preview_layout">Não foi possível visualizar o layout!</string>
+  <string name="msg_cannot_preview_layout">Não foi possível visualizar layout!</string>
   <string name="title_preview_layout">Visualizar layout</string>
   <string name="label_ui_designer_content">Conteúdo principal do designer da UI</string>
   <string name="msg_applicable_attrs">Atributos aplicáveis</string>
   <string name="msg_attr_editor_actions">Ações</string>
   <string name="title_viewaction_delete">Excluir</string>
-  <string name="msg_viewaction_select_parent">Selecionar parentesco</string>
-  <string name="msg_no_view_parent">Este view não possui um parente</string>
+  <string name="msg_viewaction_select_parent">Selecione parente</string>
+  <string name="msg_no_view_parent">Esta view não tem um parente</string>
   <string name="msg_yesno_def_title">Por favor confirme</string>
   <string name="msg_yesno_def_message">Tem certeza?</string>
   <string name="msg_view_deletion_failed">Não foi possível excluir a visualização.</string>
@@ -238,81 +238,81 @@
   <string name="msg_generate_xml_failed">Falha ao gerar código XML</string>
   <string name="title_generating_xml">Gerando código XML</string>
   <string name="title_code_generation_failed">Falha na geração do código</string>
-  <string name="msg_code_generation_failed">Falha ao gerar código XML. Você gostaria de sair mesmo assim?</string>
-  <string name="msg_invalid_designer_result">UI Designer retornou um resultado inválido</string>
-  <string name="msg_swipe_up">Deslize para ver a saída de compilação, logs e muito mais.</string>
+  <string name="msg_code_generation_failed">Falha ao gerar código XML. Deseja sair mesmo assim?</string>
+  <string name="msg_invalid_designer_result">UI Designer retornou resultado inválido</string>
+  <string name="msg_swipe_up">Deslize para cima para ver a saída da compilação, logs e muito mais.</string>
   <string name="msg_ide_crashed">AndroidIDE crashou</string>
-  <string name="msg_report_crash">Por favor, abra um assunto no github com o seguinte stacktrace :</string>
-  <string name="msg_crash_report_hint">Clique no botão abaixo para copiar o log e abrir a página de problemas.</string>
-  <string name="msg_copy_report_action">Copiar e denunciar</string>
+  <string name="msg_report_crash">Abra um problema no github com o seguinte stacktrace:</string>
+  <string name="msg_crash_report_hint">Clique no botão abaixo para copiar o registro e abrir a página de issues.</string>
+  <string name="msg_copy_report_action">Copiar e relatar</string>
   <string name="msg_reading_bootstrap">Lendo o arquivo bootstrap…</string>
   <string name="msg_bootstrap_installation_error">A instalação do bootstrap falhou com a seguinte exception.</string>
   <string name="title_translations">Traduções</string>
-  <string name="title_compiler_module_install">Instalando o módulo do compilador</string>
-  <string name="msg_compiler_module_install">O módulo do compilador está sendo instalado, aguarde…</string>
-  <string name="msg_compiler_module_install_failed">Falha na instalação do módulo do compilador. O erro foi:\n%s</string>
-  <string name="msg_compiler_module_installed">Módulo do compilador instalado com sucesso!</string>
+  <string name="title_compiler_module_install">Instalando o módulo compilador</string>
+  <string name="msg_compiler_module_install">O módulo do compilador está sendo instalado, aguarde...</string>
+  <string name="msg_compiler_module_install_failed">A instalação do módulo do compilador falhou. O erro foi:\n%s</string>
+  <string name="msg_compiler_module_installed">Módulo compilador instalado com sucesso!</string>
   <string name="action_expand_selection">Expandir seleção</string>
-  <string name="idepref_java_matchLower_title">Combinar o autocomplete em letras minúsculas</string>
+  <string name="idepref_java_matchLower_title">Autocomplete sugerir com letras minúsculas</string>
   <string name="title_common">Comum</string>
   <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">Arquivos não salvos</string>
-  <string name="msg_files_unsaved">Alguns arquivos não são salvos. Gostaria de salvá-los antes de fechar? Os arquivos não salvos são: \n%s</string>
+  <string name="msg_files_unsaved">Alguns arquivos não foram salvos. Gostaria de salvá-los antes de fechar? Os arquivos não salvos são: \n%s</string>
   <string name="idepref_editor_autoSave_title">Salve antes de fechar os arquivos</string>
-  <string name="idepref_editor_autoSave_summary">Salve os arquivos antes de fechá-los. Este recurso é EXPERIMENTAL. Espera-se que você mesmo salve os arquivos.</string>
-  <string name="idepref_java_matchLower_summary">Se ativado, digitar letras minúsculas ou maiúsculas sugerirá nomes de classe, bem como membros do escopo.</string>
+  <string name="idepref_editor_autoSave_summary">Salve os arquivos antes de fechá-los. Este é um recurso EXPERIMENTAL. Espera-se que você mesmo salve os arquivos.</string>
+  <string name="idepref_java_matchLower_summary">Se ativado, digitar letras minúsculas ou maiúsculas sugerirá nomes de classes, bem como membros do escopo.</string>
   <string name="idepref_editor_ligatures_title">Ligaduras de fonte</string>
-  <string name="idepref_editor_ligatures_summary">Ativar/desativar ligaduras de fonte</string>
+  <string name="idepref_editor_ligatures_summary">Ativar/desativar ligaduras de fontes</string>
   <string name="yes">Sim</string>
   <string name="no">Não</string>
-  <string name="msg_apk_install_intent_failed">Não foi possível iniciar a intenção de instalação do APK</string>
+  <string name="msg_apk_install_intent_failed">Não foi possível iniciar a tentativa de instalação do APK</string>
   <string name="msg_viewaction_add_attr">Adicionar atributo</string>
-  <string name="msg_search_attrs">Atributos de pesquisa…</string>
+  <string name="msg_search_attrs">Pesquisar atributos…</string>
   <string name="hint_dimension_val">Valor da dimensão</string>
   <string name="hint_dimension_res">Recurso de dimensão</string>
   <string name="hint_boolean_res">Recurso booleano</string>
   <string name="msg_file_tree">Lista de arquivos</string>
-  <string name="hint_color_resource">Recurso de cor</string>
+  <string name="hint_color_resource">Recurso de cores</string>
   <string name="title_color_picker">Seletor de cores</string>
   <string name="hint_string_value">Valor da string</string>
   <string name="hint_string_resource">Recurso de string</string>
   <string name="hint_resource_reference">Qualquer referência de recurso</string>
   <string name="msg_code_actions">Ações</string>
   <string name="title_format_code">Formatar código</string>
-  <string name="idepref_java_useGoogleStyle_title">Usar a formatação de código do Google Java Style</string>
-  <string name="idepref_java_useGoogleStyle_summary">Use a configuração de formatação de código Java Style do Google para formatar o código fonte Java.</string>
-  <string name="idepref_visiblePassword_title">Bandeira de senha visível</string>
-  <string name="idepref_visiblePassword_summary">Use para não exibir nenhuma dica de senha.</string>
+  <string name="idepref_java_useGoogleStyle_title">Use a formatação de código Google Java Style</string>
+  <string name="idepref_java_useGoogleStyle_summary">Use a configuração de formatação de código Google Java Style para formatar o código-fonte Java.</string>
+  <string name="idepref_visiblePassword_title">Sinalizador de senha visível</string>
+  <string name="idepref_visiblePassword_summary">Use para sinalizador de tipo de entrada de senha visível no editor. Isso garante que nenhuma sugestão seja proposta pelo teclado virtual.</string>
   <string name="previous">Anterior</string>
   <string name="msg_replacing">Substituindo…</string>
   <string name="title_gradle_service_notification_ticker">Serviço de compilação Gradle iniciado</string>
   <string name="title_gradle_service_notification">Serviço de compilação Gradle</string>
-  <string name="msg_gradle_service_notification">O serviço de construção Gradle do AndroidIDE está em segundo plano.</string>
+  <string name="msg_gradle_service_notification">O serviço de compilação Gradle do AndroidIDE está sendo executado em segundo plano.</string>
   <string name="title_cancel_build">Cancelar compilação</string>
   <string name="title_warning">Aviso</string>
-  <string name="msg_ndk_currently_unsupported">Atualmente, o NDK não é oficialmente suportado. Este modelo só funciona depois que você configurar a NDK</string>
+  <string name="msg_ndk_currently_unsupported">Atualmente, o NDK não é oficialmente suportado. Este modelo funciona somente depois que você configura o NDK</string>
   <string name="msg_initializing_project">Inicializando projeto</string>
   <string name="msg_project_initialized">Projeto inicializado</string>
-  <string name="msg_project_initialization_failed">Falha na inicialização do projeto</string>
+  <string name="msg_project_initialization_failed">A inicialização do projeto falhou</string>
   <string name="msg_project_not_initialized">O projeto não foi inicializado</string>
   <string name="msg_running_task">Tarefa em execução: \'%1$s\'</string>
   <string name="msg_replacement">Substituição</string>
   <string name="title_sync_project">Sincronizar projeto</string>
-  <string name="wizard_error_name_empty">O nome não pode ser vazio.</string>
+  <string name="wizard_error_name_empty">O nome não pode estar vazio.</string>
   <string name="wizard_error_name_illegal">O nome não pode conter caracteres ilegais</string>
-  <string name="wizard_save_location">Salvar localização</string>
-  <string name="wizard_language">Idioma do projeto</string>
-  <string name="wizard_loading">Modelos carregando…</string>
-  <string name="wizard_toolchain">C++ Padrão</string>
+  <string name="wizard_save_location">Local de salvamento</string>
+  <string name="wizard_language">Linguagem do Projeto</string>
+  <string name="wizard_loading">Carregando modelos...</string>
+  <string name="wizard_toolchain">C++ Standard</string>
   <string name="next">Próximo</string>
   <string name="exit">Sair</string>
-  <string name="idepref_title_tpFix">Correção de ponteiros de tag JDK 11</string>
-  <string name="idepref_msg_tpFix">Defina LD_PRELOAD como libhook.so para corrigir o problema de ponteiros de tag para o JDK 11 no Android 11 [OBSOLETO - Prefira usar o JDK 17].</string>
+  <string name="idepref_title_tpFix">Correção de ponteiros de tag do JDK 11</string>
+  <string name="idepref_msg_tpFix">Defina LD_PRELOAD como libhook.so para corrigir o problema de ponteiros de tag para JDK 11 no Android 11 [OBSOLETO - Prefira usar JDK 17].</string>
   <string name="idepref_title_customGradleInstallation">Instalação personalizada do Gradle</string>
-  <string name="idepref_msg_customGradleInstallation">Especifique uma instalação personalizada do Gradle a ser usada para compilação. Isso SUBSTITUI a versão especificada em gradle-wrapper.properties.</string>
+  <string name="idepref_msg_customGradleInstallation">Especifique uma instalação personalizada do Gradle a ser usada para build. Isso SUBSTITUI a versão especificada em gradle-wrapper.properties.</string>
   <string name="msg_gradle_installation_path">Caminho de instalação do Gradle</string>
   <string name="msg_gradle_installation_input_help">Deixe em branco para usar o wrapper Gradle.</string>
-  <string name="msg_require_install_jdk_and_android_sdk">Você precisa instalar o JDK e o SDK do Android para que o IDE funcione. Para instalar, clique em \'Sim\' e siga as instruções <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">aqui</a>]]></string>
+  <string name="msg_require_install_jdk_and_android_sdk">Você precisa instalar o JDK e o Android SDK para que a IDE funcione. Para instalar clique em \'Sim\' e siga as instruções <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">aqui</a>]]></string>
   <string name="build_status_idle">Nenhuma compilação em andamento</string>
   <string name="build_status_in_progress">Compilação em andamento…</string>
   <string name="build_status_failed">Falha na compilação. Consulte os logs de compilação para obter mais detalhes.</string>
@@ -372,33 +372,32 @@
   <string name="idepref_maxLineWidth_title">Largura máxima da linha</string>
   <string name="idepref_maxLineWidth_summary">O número máximo de caracteres que uma linha deve ter.</string>
   <string name="idepref_splitAttrIndentSize_title">Dividir o tamanho do recuo dos atributos</string>
-  <string name="idepref_splitAttrIndentSize_summary">O número de espaços a serem indexados para atributos divididos.</string>
   <string name="idepref_preservedNewLines_title">Novas linhas preservadas</string>
   <string name="idepref_preservedNewLines_summary">O número máximo de quebras de linha contínuas que devem ser preservadas.</string>
   <string name="idepref_emptyElements_title">Comportamento de elementos vazios</string>
   <string name="idepref_emptyElements_summary">Escolha o comportamento de formatação para elementos vazios.</string>
   <string name="xml_formatting_options">Opções de formatação XML</string>
   <string name="xml_formatting_options_summary">Configurar o formatador XML</string>
-  <string name="idepref_customFont_title">Use custom font</string>
-  <string name="idepref_customFont_summary">If enabled, the file at \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" will be used as Editor font.</string>
-  <string name="idepref_chooseFont_title">Choose custom font</string>
-  <string name="idepref_chooseFont_summary">Choose font to use in the Terminal (and optionally, in the Editor).</string>
+  <string name="idepref_customFont_title">Usar fonte personalizada</string>
+  <string name="idepref_customFont_summary">Se ativado, o arquivo em \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" será usado como fonte do Editor.</string>
+  <string name="idepref_chooseFont_title">Escolha a fonte personalizada</string>
+  <string name="idepref_chooseFont_summary">Escolha a fonte a ser usada no Terminal (e opcionalmente, no Editor).</string>
   <string name="msg_installing_apk">Instalando APK...</string>
   <string name="msg_installed_successfully">Instalado com sucesso</string>
   <string name="msg_action_open_application">Deseja abrir o aplicativo?</string>
-  <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build service</string>
-  <string name="msg_hex_color_code">Código de cor hexadecimal</string>
+  <string name="title_gradle_service_notification_channel">Serviço de compilação AndroidIDE Gradle</string>
+  <string name="msg_hex_color_code">Código de cores hexadecimais</string>
   <string name="msg_color_picker_pick">Escolha</string>
-  <string name="msg_chmod_exec">Definindo permissões executáveis…</string>
+  <string name="msg_chmod_exec">Configurando permissões executáveis…</string>
   <string name="msg_linking">Vinculando %1$s a %2$s</string>
-  <string name="msg_extracting_hooks">Extraindo bibliotecas de ganchos…</string>
-  <string name="msg_empty_package">Package name is empty</string>
-  <string name="msg_package_is_not_valid">Package name is not a valid</string>
-  <string name="msg_package_is_to_long">Package name is to long</string>
-  <string name="msg_package_not_valid_char_1">The character \'_\' cannot be the first character in a package segment</string>
-  <string name="msg_package_not_use_digit_first">A digit cannot be the first character in a package segment</string>
-  <string name="msg_package_not_valid_char_2">The character \"%1$s\" is not allowed in Android application package names</string>
-  <string name="msg_package_mus_have_dot">The package must have at least one \'.\' separator</string>
+  <string name="msg_extracting_hooks">Extraindo bibliotecas de hook…</string>
+  <string name="msg_empty_package">O nome do pacote está vazio</string>
+  <string name="msg_package_is_not_valid">O nome do pacote não é válido</string>
+  <string name="msg_package_is_to_long">O nome do pacote é muito longo</string>
+  <string name="msg_package_not_valid_char_1">O caractere \'_\' não pode ser o primeiro caractere em um segmento de pacote</string>
+  <string name="msg_package_not_use_digit_first">Um dígito não pode ser o primeiro caractere em um segmento de pacote</string>
+  <string name="msg_package_not_valid_char_2">O caractere \"%1$s\" não é permitido em nomes de pacotes de aplicativos Android</string>
+  <string name="msg_package_mus_have_dot">O pacote deve ter pelo menos um separador \'.\'</string>
   <string name="action_import_classes">Importar classe(s)</string>
   <string name="action_generate_setters_getters">Gerar setters/getters</string>
   <string name="action_add_throws">Adicionar \'throws\'</string>
@@ -473,4 +472,12 @@
   <string name="widget_linear_layout_horz">LinearLayout (H)</string>
   <string name="widget_linear_layout_vert">LinearLayout (V)</string>
   <string name="widget_relative_layout">RelativeLayout</string>
+  <!-- GIT -->
+  <string name="git_clone">Clonar</string>
+  <string name="git_clone_repo">Clonar repositório git</string>
+  <string name="git_clone_repo_url">URL do repositório</string>
+  <string name="git_clone_in_progress">Clonando repositório</string>
+  <string name="git_clone_success">Git clonado com sucesso</string>
+  <string name="git_clone_failed">Falha ao clonar repositório git</string>
+  <string name="idepref_splitAttrIndentSize_summary">O número de espaços a serem indexados para atributos divididos.</string>
 </resources>
