--- a/resources/src/main/res/values-de/strings.xml
+++ b/resources/src/main/res/values-de/strings.xml
@@ -5,7 +5,7 @@
   <string name="license_jdk">AndroidIDE verwendet einen modifizierten Build des JDK, das unter der GNU General Public License v2.0 lizenziert ist. Der Quellcode und die Lizenz des JDK sind verf&#xFC;gbar unter:</string>
   <string name="title_open_source_licenses">Open-Source-Lizenzen</string>
   <string name="msg_about_licensed_under">Lizenziert unter:</string>
-  <string name="about_option_email">Email</string>
+  <string name="about_option_email">E-Mail</string>
   <string name="about_option_website">Internetseite</string>
   <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s f&#xFC;r %2$s</string>
@@ -20,12 +20,12 @@
   <string name="share_with_friends">Mit Freunden teilen</string>
   <string name="ide_preferences">IDE-Einstellungen</string>
   <string name="discussions_on_telegram">Auf Telegram diskutieren</string>
-  <string name="official_tg_channel">Official Telegram Channel</string>
+  <string name="official_tg_channel">Offizieller Telegram-Kanal</string>
   <string name="msg_empty_view">Es gibt nichts zum anzeigen&#x2026;</string>
-  <string name="btn_terminal">Terminal</string>
+  <string name="btn_terminal">Konsole</string>
   <string name="reset">Zur&#xFC;cksetzen</string>
-  <string name="app_logs">App Logs</string>
-  <string name="ide_logs">IDE Logs</string>
+  <string name="app_logs">App-Protokolle</string>
+  <string name="ide_logs">IDE-Protokolle</string>
   <string name="label_splash_image">Splash-Bild</string>
   <string name="get_started">Loslegen</string>
   <!-- LSP, Diagnostics & Completions -->
@@ -53,8 +53,8 @@
   <string name="lint_release">lintRelease</string>
   <string name="build">Bauen</string>
   <string name="build_debug">AssembleDebug</string>
-  <string name="build_output">Build output</string>
-  <string name="build_release">assembleRelease</string>
+  <string name="build_output">Build-Ausgabe</string>
+  <string name="build_release">assembbleRelease</string>
   <string name="lint_tasks">Lint-Aufgaben</string>
   <string name="clean_amp_build">Clean &amp; build</string>
   <string name="clean_project">S&#xE4;ubern</string>
@@ -69,7 +69,7 @@
   <string name="gradle_daemon_status">Gradle-Daemon-Status</string>
   <string name="title_install_apks">APK(s) installieren</string>
   <string name="title_clear_output">Ausgabe s&#xE4;ubern</string>
-  <string name="run">Run</string>
+  <string name="run">Ausführen</string>
   <string name="gradle">Gradle</string>
   <string name="title_first_build">Erster Build</string>
   <string name="msg_first_build">Dies ist der erste Build, nachdem Sie AndroidIDE installiert haben. Der erste Build dauert normalerweise einige Zeit, da Gradle ben&#xF6;tigte Dateien herunterl&#xE4;dt. Dieser Vorgang kann etwa 10 bis 15 Minuten dauern. Dies h&#xE4;ngt jedoch von Ihrer Netzwerkverbindung ab.\n\nBitte haben Sie etwas Geduld &#x2026;</string>
@@ -101,7 +101,7 @@
   <string name="template_libgdx">LibGDX Spiel</string>
   <string name="template_description_libgdx">LibGDX-Spieleprojekt eingerichtet, um ein Bild als Beispiel zu rendern.</string>
   <string name="template_compose">Jetpack Compose</string>
-  <string name="template_description_compose">Basic Jetpack Compose hello world project.</string>
+  <string name="template_description_compose">Basic Jetpack Compose Hello World Projekt.</string>
   <string name="template_navigation_tabs">Bottom Navigation Activity</string>
   <string name="template_navigation_tabs_description">Erstellt eine neue Activity mit eine bottom navigation</string>
   <string name="template_tabs">Tabbed Activity</string>
@@ -109,10 +109,10 @@
   <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
   <string name="template_cpp_description">Erstellt ein neues Projekt mit einer leeren Activity konfiguriert um JNI zu benutzen</string>
-  <string name="template_no_activity">No Activity</string>
-  <string name="template_no_activity_description">Creates a new project without activity</string>
+  <string name="template_no_activity">Keine Activity</string>
+  <string name="template_no_activity_description">Erstellt ein neues Projekt ohne Activity</string>
   <string name="template_no_AndroidX">NoAndroidX</string>
-  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
+  <string name="template_description_noAndroidX">Erstellt ein neues Projekt ohne AndroidX Bibliothek</string>
   <!-- Files -->
   <string name="save">Speichern</string>
   <string name="menu_find">Finden</string>
@@ -171,7 +171,7 @@
   <string name="msg_newfile_dest">Ziel: %s/</string>
   <string name="restype_drawable">Drawable</string>
   <string name="restype_layout">Layout</string>
-  <string name="restype_menu">Menu</string>
+  <string name="restype_menu">Menü</string>
   <string name="restype_other">Andere</string>
   <string name="classtype_class">Klasse</string>
   <string name="classtype_activity">Aktivity</string>
@@ -274,8 +274,8 @@
   <string name="msg_file_tree">Dateipfad</string>
   <string name="hint_color_resource">Farbwert</string>
   <string name="title_color_picker">Farbauswahl</string>
-  <string name="hint_string_value">String value</string>
-  <string name="hint_string_resource">String resource</string>
+  <string name="hint_string_value">String-Wert</string>
+  <string name="hint_string_resource">String-Ressource</string>
   <string name="hint_resource_reference">Any resource reference</string>
   <string name="msg_code_actions">Aktionen</string>
   <string name="title_format_code">Code formatieren</string>
@@ -292,7 +292,7 @@
   <string name="title_warning">Warnung</string>
   <string name="msg_ndk_currently_unsupported">NDK ist momentan nicht offiziel unterstützt. Die Vorlage funktioniert erste nach der installation des NDK.</string>
   <string name="msg_initializing_project">Projekt initialisiert</string>
-  <string name="msg_project_initialized">Project initialized</string>
+  <string name="msg_project_initialized">Projekt initialisiert</string>
   <string name="msg_project_initialization_failed">Initialiserung des Projekts fehlgeschlagen</string>
   <string name="msg_project_not_initialized">Projekt ist nicht initialisert.</string>
   <string name="msg_running_task">Laufende Aufgaben: \'%1$s\'</string>
@@ -331,19 +331,19 @@
   <string name="idepref_editor_useSoftTabs_title">Soft tab benutzen</string>
   <string name="idepref_editor_useSoftTabs_summary">Wählen Sie, ob Leerzeichen anstelle von Tab verwendet werden sollen (\\t).</string>
   <string name="btn_sponsor">Sponsor</string>
-  <string name="btn_docs">Documentation</string>
-  <string name="btn_close">Close</string>
+  <string name="btn_docs">Dokumentation</string>
+  <string name="btn_close">Schließen</string>
   <string name="msg_ignore_case">Ignore case</string>
   <string name="msg_use_regex">Use regex</string>
   <string name="idepref_buildnrun_summary">Configure the Gradle build.</string>
   <string name="configure">Configure</string>
-  <string name="about">About</string>
-  <string name="idepref_github_summary">AndroidIDE is open source!</string>
-  <string name="idepref_channel_summary">Subscribe for latest updates.</string>
+  <string name="about">Über</string>
+  <string name="idepref_github_summary">AndriodIDE ist Open Source!</string>
+  <string name="idepref_channel_summary">Abonnieren sie für die neuesten Updates.</string>
   <string name="idepref_group_summary">Discuss featues, bugs and improvements here.</string>
-  <string name="idepref_changelog_summary">What\'s new in this version?</string>
-  <string name="idepref_about_summary">More about AndroidIDE.</string>
-  <string name="idepref_general_summary">General IDE configuration.</string>
+  <string name="idepref_changelog_summary">Was ist neu in der Version?</string>
+  <string name="idepref_about_summary">Mehr über AndroidIDE.</string>
+  <string name="idepref_general_summary">Allgemeine IDE-Konfiguration.</string>
   <string name="idepref_editor_summary">Configure the editor.</string>
   <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
@@ -369,10 +369,9 @@
   <string name="idepref_xml_trimTrailingWs_title">Trim trailing whitespace</string>
   <string name="idepref_xml_trimTrailingWs_summary">Remove extra whitespaces at the end of lines.</string>
   <string name="idepref_editor_formatterOptions">Formatter options</string>
-  <string name="idepref_maxLineWidth_title">Max line width</string>
+  <string name="idepref_maxLineWidth_title">Max. Linienbreite</string>
   <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to index for splitted attributes.</string>
   <string name="idepref_preservedNewLines_title">Preserved new lines</string>
   <string name="idepref_preservedNewLines_summary">The maximum number of continuous line breaks that should be preserved.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
@@ -383,9 +382,9 @@
   <string name="idepref_customFont_summary">If enabled, the file at \"/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf\" will be used as Editor font.</string>
   <string name="idepref_chooseFont_title">Choose custom font</string>
   <string name="idepref_chooseFont_summary">Choose font to use in the Terminal (and optionally, in the Editor).</string>
-  <string name="msg_installing_apk">Installing APK...</string>
-  <string name="msg_installed_successfully">Installed successfully</string>
-  <string name="msg_action_open_application">Do you want to open the application?</string>
+  <string name="msg_installing_apk">Installiere APK...</string>
+  <string name="msg_installed_successfully">Installation erfolgreich</string>
+  <string name="msg_action_open_application">Möchtest du die Applikation öffnen?</string>
   <string name="title_gradle_service_notification_channel">AndroidIDE Gradle build service</string>
   <string name="msg_hex_color_code">Hex Farbcode</string>
   <string name="msg_color_picker_pick">Auswählen</string>
@@ -408,7 +407,7 @@
   <string name="action_generate_constructor">Generate constructor</string>
   <string name="action_implement_abstract_methods">Implement abstract method(s)</string>
   <string name="action_remove_class">Remove class</string>
-  <string name="action_remove_method">Remove method</string>
+  <string name="action_remove_method">Entferne Methode</string>
   <string name="action_remove_unused_throws">Remove unused throws</string>
   <string name="action_suppress_unchecked_warning">Suppress \'unchecked\' warning</string>
   <string name="action_uncomment_line">Uncomment line</string>
@@ -429,23 +428,23 @@
   <string name="action_organize_imports">Organize imports</string>
   <string name="msg_cannot_generate_toString">Unable to generate toString() implementation</string>
   <string name="msg_toString_overridden">toString() is already overridden</string>
-  <string name="action_generate_missing_constructor">Generate missing constructor</string>
-  <string name="msg_cannot_generate_constructor">Unable to generate constructor</string>
+  <string name="action_generate_missing_constructor">Fehlender Konstruktor generieren</string>
+  <string name="msg_cannot_generate_constructor">Konstruktor kann nicht erstellt werden</string>
   <string name="msg_constructor_available">A constructor with same parameter types is already available</string>
   <string name="msg_cannot_create_view">View kann nicht erstellt werden für: %s</string>
   <string name="err_no_attr_adapter">Keine Implementierung des Attributadapters gefunden für%s</string>
   <string name="msg_view_not_supported">View %s ist noch nicht untestützt.</string>
-  <string name="replace">Replace</string>
+  <string name="replace">Ersetzen</string>
   <string name="replaceAll">Replace all</string>
-  <string name="title_run_tasks">Run tasks</string>
-  <string name="hint_search_tasks">Search tasks…</string>
-  <string name="title_selected_tasks">Selected tasks</string>
-  <string name="msg_err_select_tasks">Please select tasks to run</string>
-  <string name="title_confirmation">Confirmation</string>
-  <string name="msg_tasks_to_run">The following tasks will be run, in order. Click the \'Run\' button again to confirm.\n\n%1$s</string>
-  <string name="msg_loading_tasks">Loading tasks...</string>
-  <string name="title_all_tasks">All tasks</string>
-  <string name="msg_feature_unimplemented">This feature is not implemented yet.</string>
+  <string name="title_run_tasks">Tasks ausführen</string>
+  <string name="hint_search_tasks">Aufgaben suchen…</string>
+  <string name="title_selected_tasks">Ausgewählte Aufgaben</string>
+  <string name="msg_err_select_tasks">Bitte wählen Sie die auszuführenden Aufgaben</string>
+  <string name="title_confirmation">Bestätigung</string>
+  <string name="msg_tasks_to_run">Die folgenden Aufgaben werden in der Reihenfolge ausgeführt. Zum Bestätigen erneut auf \'Ausführen\' klicken.\n\n%1$s</string>
+  <string name="msg_loading_tasks">Aufgaben werden geladen...</string>
+  <string name="title_all_tasks">Alle Aufgaben</string>
+  <string name="msg_feature_unimplemented">Diese Funktion ist noch nicht implementiert.</string>
   <string name="ui_category_widgets">Widgets</string>
   <string name="ui_category_layouts">Layouts</string>
   <string name="widget_textview">TextView</string>
@@ -473,4 +472,12 @@
   <string name="widget_linear_layout_horz">LinearLayout (H)</string>
   <string name="widget_linear_layout_vert">LinearLayout (V)</string>
   <string name="widget_relative_layout">RelativeLayout</string>
+  <!-- GIT -->
+  <string name="git_clone">Clone</string>
+  <string name="git_clone_repo">Clone git repository</string>
+  <string name="git_clone_repo_url">Repository URL</string>
+  <string name="git_clone_in_progress">Cloning repository</string>
+  <string name="git_clone_success">Git clone successful</string>
+  <string name="git_clone_failed">Failed to clone git repository</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
 </resources>
