--- a/resources/src/main/res/values-zh/strings.xml
+++ b/resources/src/main/res/values-zh/strings.xml
@@ -372,7 +372,6 @@
   <string name="idepref_maxLineWidth_title">最大行宽</string>
   <string name="idepref_maxLineWidth_summary">每行字符数最高上限</string>
   <string name="idepref_splitAttrIndentSize_title">拆分属性缩进大小</string>
-  <string name="idepref_splitAttrIndentSize_summary">要为拆分属性编制索引的空格数</string>
   <string name="idepref_preservedNewLines_title">新线保留</string>
   <string name="idepref_preservedNewLines_summary">应保留连续换行符的最大数目</string>
   <string name="idepref_emptyElements_title">空元素行为</string>
@@ -473,4 +472,12 @@
   <string name="widget_linear_layout_horz">LinearLayout (H)</string>
   <string name="widget_linear_layout_vert">LinearLayout (V)</string>
   <string name="widget_relative_layout">RelativeLayout</string>
+  <!-- GIT -->
+  <string name="git_clone">Clone</string>
+  <string name="git_clone_repo">Clone git repository</string>
+  <string name="git_clone_repo_url">Repository URL</string>
+  <string name="git_clone_in_progress">Cloning repository</string>
+  <string name="git_clone_success">Git clone successful</string>
+  <string name="git_clone_failed">Failed to clone git repository</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
 </resources>
