--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -289,7 +289,7 @@
   <string name="msg_file_tree">File tree</string>
   <string name="hint_color_resource">Color resource</string>
   <string name="title_color_picker">Color picker</string>
-  <string name="hint_string_value">String value</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">String resource</string>
   <string name="hint_resource_reference">Any resource reference</string>
   <string name="msg_code_actions">Actions</string>
